Fixed a bug in topics and aligned text to left.

--- a/frontend/src/TopicRenderer.css
+++ b/frontend/src/TopicRenderer.css
@@ -32,6 +32,7 @@
   font-size: 1.125rem;
   line-height: 1.75;
   margin-bottom: 2rem;
+  text-align: left;
   color: #4b5563;
 }
 
